i2f-tools/i2f-jdbc-procedure-idea-plugin/src/main/resources/assets/ognl/Ognl.bnf
// 第七步:定义bnf语法
// 第八步:右键生成parse code
// 第九步:右键生成flex文件
{
  // 语言解析器,由Grammar-Kit插件根据bnf语法文件自动生成
  parserClass="i2f.turbo.idea.plugin.ognl.grammar.parser.OgnlParser"
  // 定义辅助类,供 OgnlParser 类使用
  parserUtilClass="i2f.turbo.idea.plugin.ognl.lang.parser.OgnlParserUtil"

  // 指定生成的PsiElement子类需要继承的父类
  extends="i2f.turbo.idea.plugin.ognl.lang.psi.OgnlPsiElement"

  // 指定所有生成的PsiElement类的类名前缀
  psiClassPrefix="Ognl"
  // 指定所有生成的PsiElement实现类的类名后缀
  psiImplClassSuffix="Impl"
  // 指定所有生成的PsiElement类的包位置
  psiPackage="i2f.turbo.idea.plugin.ognl.grammar.psi.elements"
  // 指定所有生成的PsiElement实现类的包位置
  psiImplPackage="i2f.turbo.idea.plugin.ognl.grammar.psi.elements.impl"

  // 指定ElementType所在的类,由Grammar-Kit自动生成
  elementTypeHolderClass="i2f.turbo.idea.plugin.ognl.grammar.psi.OgnlTypes"
  // 定义elementType类型,供 OgnlTypes 类使用
  elementTypeClass="i2f.turbo.idea.plugin.ognl.lang.psi.OgnlElementType"
  // 定义tokenType类型,供 OgnlTypes 类使用
  tokenTypeClass="i2f.turbo.idea.plugin.ognl.lang.psi.OgnlTokenType"
  // 定义工具类,供所有PsiElement实现类使用
  psiImplUtilClass="i2f.turbo.idea.plugin.ognl.lang.psi.impl.OgnlPsiImplUtil"

    extends(".*script")=script
  // 定义终结符，这里目前只会使用regexp来进行正则表达式匹配得到终结符
  // 研究不深，还不知道怎么对终结符进行重用，也就是一个终极符分解为多个终结符的语法
  tokens=[

///////////////////////////////////////////
// tokens
//////////////////////////////////////////

    TERM_CONST_STRING= "regexp:\"((\\\")+|[^\"])*\""
    TERM_CONST_STRING_SINGLE= "regexp:'((\\\\')+|[^'])*'"

    KW_CONST_BOOLEAN="regexp:true|false"

    KW_CONST_NULL="null"


    TERM_CONST_NUMBER_HEX="regexp:0[xX][0-9a-fA-F_]+[lLhH]?"

    TERM_CONST_NUMBER_OTC="regexp:0[oOtT][0-7_]+[lLhH]?"

    TERM_CONST_NUMBER_BIN="regexp:0[bB][0-7_]+[lLhH]?"

    TERM_CONST_NUMBER_SCIEN_2="regexp:[0-9]+[0-9_]*\.[0-9]+[0-9_]*[eE][-]?[0-9]+[0-9_]*[fFhH]?"

    TERM_CONST_NUMBER_SCIEN_1="regexp:[0-9]+[0-9_]*[eE][-]?[0-9]+[0-9_]*[lLhH]?"

    TERM_CONST_NUMBER_FLOAT="regexp:[0-9]+[0-9_]*\.[0-9]+[0-9_]*[fFhH]?"

    TERM_CONST_NUMBER="regexp:[0-9]+[0-9_]*[lLhH]?"

///////////////////////////////////////////
// tokens
//////////////////////////////////////////
    KW_NEW= "new"

    KW_NOT= "not"

    KW_GTE= "gte"
    KW_LTE= "lte"
    KW_GT= "gt"
    KW_LT= "lt"
    KW_NEQ= "neq"
    KW_NE= "ne"
    KW_EQ= "eq"
    KW_IN= "in"
    KW_INSTANCEOF= "instanceof"

    KW_SHL= "shl";
    KW_SHR= "shr";
    KW_USHR= "ushr";
    KW_XOR= "xor";
    KW_BAND= "band";
    KW_BOR= "bor";

    KW_AND= "and"
    KW_OR= "or"

    IDENTIFIER="regexp:[a-zA-Z_][a-zA-Z0-9_]*"


    TERM_PAREN_L   = '('
    TERM_PAREN_R   = ')'
    TERM_COMMA    = ','
    TERM_DOT      = '.'
    TERM_CURLY_L   = '{'
    TERM_CURLY_R   = '}'

    TERM_COLON=':';

    TERM_BRACKET_SQUARE_L='[';
    TERM_BRACKET_SQUARE_R=']';

    TERM_QUESTION='?';
    TERM_DOLLAR='$';
    TERM_SHARP='#';
    TERM_AT='@';

    OP_MUL='*';
    OP_DIV='/';
    OP_MOD='%';
    OP_ADD='+';
    OP_SUB='-';
    OP_GTE='>=';
    OP_LTE='<=';
    OP_NE='!=';
    OP_EQ='==';
    OP_GT='>';
    OP_LT='<';
    OP_AND='&&';
    OP_OR='||';
    OP_EXCLAM='!';
    OP_BIT_LMOV='<<';
    OP_BIT_RSMOV='>>>';
    OP_BIT_RMOV='>>';
    OP_BIT_XOR='^';
    OP_BIT_AND='&';
    OP_BIT_OR='|';
    OP_BIT_REVERSE='~';

    OP_ASSIGN='=';

    WORD="regexp:\w+"

    // 定义空白符
    WS="regexp:[ \t\r\n]+"
  ]
}

root::=
    script
    ;

// 语法正文
script::=
    express <<eof>>
    ;


express::=
    expressSegment (operatorSegment)*

//    {extends=express}
//    {
//       recoverWhile="content_recover"
//    }
    ;
    // 因为定义上每条语句独立，因此配置recoverWhile
    // 这样就算某一条语句报错，也不影响IDEA与其他语句的分析操作

    // 对于不满足语法的，都用当WORD字符处理
//    private content_recover ::= !(WORD)

operatorSegment::=
    chainSubExpress
    | projectingAcrossCollectionExpress
    | selectFromCollectionExpress
    | instanceFunctionCallRightPart // 实例函数调用
    | squareExpress
    | propertyExpress
    | mathMulDivOperatorPart express // 数学乘除运算；数学运算，需要从左到右，因此不能提取为子规则
    | mathAddSubOperatorPart express // 数学加减运算；数学运算，需要从左到右，因此不能提取为子规则
    | compareOperatorPart express // 比较运算符
    | bitOperatorPart  express // 位运算符号；数学运算，需要从左到右，因此不能提取为子规则
    | logicalLinkHighOperatorPart express // 逻辑连接符
    | logicalLinkLowOperatorPart express // 逻辑连接符
    | thirdOperateRightPart // 三目运算符
    | assignRightPart
    | commaExpressRightPart+
    ;


expressSegment::=
    circleExpress // 括号表达式
    | newArrayExpress // 新建数组
    | newInstanceExpress // 新建实例对象
    | staticFunctionCall // 静态函数调用
    | staticPropertyExpress // 静态值获取
    | evaluateExpress
    | pseudoLambdaExpress
    | globalFunctionCall // 全局函数调用
    | prefixOperatorPart express // 前置表达式；高优先级，不能提取为子规则
    | listCollectionExpress
    | mapCollectionExpress
    | referenceVariableExpress
    | variableExpress
    | constExpress
    ;



staticFunctionCall::=
    typeReference globalFunctionCall
;

globalFunctionCall::=
    functionName functionArguments // 全局函数
    ;

circleExpress::=
    TERM_PAREN_L express TERM_PAREN_R
;

newArrayExpress::=
    KW_NEW fullName TERM_BRACKET_SQUARE_L constNumber TERM_BRACKET_SQUARE_R (listCollectionExpress)?
    | KW_NEW fullName TERM_BRACKET_SQUARE_L  TERM_BRACKET_SQUARE_R (listCollectionExpress)
;

newInstanceExpress::=
    KW_NEW fullName functionArguments
;

fullName::=
    IDENTIFIER (TERM_DOT IDENTIFIER)*
    ;

chainSubExpress::=
    TERM_DOT TERM_PAREN_L express TERM_PAREN_R
;

pseudoLambdaExpress::=
    TERM_COLON TERM_BRACKET_SQUARE_L express TERM_BRACKET_SQUARE_R
;

projectingAcrossCollectionExpress::=
    TERM_DOT TERM_CURLY_L express TERM_CURLY_R
;

selectFromCollectionExpress::=
    TERM_DOT TERM_CURLY_L selectFromCollectionModifier express TERM_CURLY_R
;

selectFromCollectionModifier::=
    TERM_QUESTION | OP_BIT_XOR | TERM_DOLLAR
;

squareExpress::=
    TERM_BRACKET_SQUARE_L express TERM_BRACKET_SQUARE_R
;

staticPropertyExpress::=
    typeReference IDENTIFIER
;

evaluateExpress::=
    TERM_SHARP IDENTIFIER TERM_PAREN_L express? TERM_PAREN_R
;

propertyExpress::=
    TERM_DOT IDENTIFIER
;

instanceFunctionCallRightPart::=
    TERM_DOT  functionName  functionArguments// 实例函数
    ;

functionName::=
    IDENTIFIER
;

functionArguments::=
    TERM_PAREN_L (express commaExpressRightPart*)? TERM_PAREN_R
;

prefixOperatorPart::=
    (OP_EXCLAM | KW_NOT | OP_BIT_REVERSE | OP_SUB | OP_ADD)
;

mathMulDivOperatorPart::=
    (OP_MUL | OP_DIV | OP_MOD)
;

mathAddSubOperatorPart::=
    (OP_ADD | OP_SUB )
;

bitOperatorPart::=
(OP_BIT_LMOV | KW_SHL | OP_BIT_RSMOV | KW_USHR | OP_BIT_RMOV | KW_SHR | OP_BIT_XOR | KW_XOR  | OP_BIT_AND | KW_BAND  | OP_BIT_OR | KW_BOR  )
;


compareOperatorPart::=
    ( OP_GT | KW_GT | OP_GTE | KW_GTE | OP_LT | KW_LT | OP_LTE | KW_LTE | OP_EQ | KW_EQ | OP_NE | KW_NEQ | KW_IN | (KW_NOT KW_IN) | KW_INSTANCEOF )
;

logicalLinkHighOperatorPart::=
    (OP_AND | KW_AND)
;

logicalLinkLowOperatorPart::=
    (OP_OR | KW_OR )
;

assignRightPart::=
    OP_ASSIGN express
;

commaExpressRightPart::=
    TERM_COMMA express
;

thirdOperateRightPart::=
    TERM_QUESTION express TERM_COLON express
;

listCollectionExpress::=
    TERM_CURLY_L (express commaExpressRightPart*)? TERM_CURLY_R
;

mapCollectionExpress::=
    TERM_SHARP typeReference? TERM_CURLY_L mapPairs? TERM_CURLY_R
;

mapPairs::=
    mapPair (TERM_COMMA mapPair)*
;

mapPair::=
    (IDENTIFIER | constString) TERM_COLON express
;


typeReference::=
    TERM_AT fullName TERM_AT
;

referenceVariableExpress::=
    TERM_SHARP IDENTIFIER
;

variableExpress::=
    IDENTIFIER
;

constExpress::=
    constNull
    | constBoolean
    | constString
    | constNumeric
;

constNull::=
    KW_CONST_NULL
;

constBoolean::=
    KW_CONST_BOOLEAN
;

constString::=
    TERM_CONST_STRING
    | TERM_CONST_STRING_SINGLE
;


constNumeric::=
    constFloat
     | constNumber
;

constNumber::=
    TERM_CONST_NUMBER_HEX
    | TERM_CONST_NUMBER_OTC
    | TERM_CONST_NUMBER_BIN
    | TERM_CONST_NUMBER
;

constFloat::=
    TERM_CONST_NUMBER_SCIEN_2
    |TERM_CONST_NUMBER_SCIEN_1
    |TERM_CONST_NUMBER_FLOAT
;
